--- a/parameters/preface.tex
+++ b/parameters/preface.tex
@@ -2,6 +2,7 @@
 
 \includepdf[pages=1, pagecommand={}]{pages/01_cover.pdf}
 
+% Empty page
 \newpage
 \thispagestyle{empty}
 \mbox{}
@@ -9,6 +10,7 @@
 
 \includepdf[pages=1, pagecommand={}]{pages/02_cover2.pdf}
 
+% Empty page
 \newpage
 \thispagestyle{empty}
 \mbox{}
