--- a/03-reinforcement.Rmd
+++ b/03-reinforcement.Rmd
@@ -2,7 +2,7 @@
 
 ## Machine Learning
 
-Machine Learning is a subfield of Computer Science and Artificial Intelligence (AI). It aims at creating entities capable of learning from examples. What distinguishes it from other AI approaches is the special emphasis on avoiding explicit programming for the task at hand, instead relying only on examples (data) to solve it and from there generalizing to previously unseen cases. So at the heart of this approach lies data. In the classical machine learning setting the algorithm is provided with a set of questions and answers. Then after a period of computations over the pairs questions-answers, the algorithm is presented with new questions, some of them never seen before, that must be answered well enough.
+Machine Learning is a subfield of Computer Science and Artificial Intelligence. It aims at creating entities capable of learning from examples. What distinguishes it from other AI approaches is the special emphasis on avoiding explicit programming for the task at hand, instead relying only on examples (data) to solve it and from there generalizing to previously unseen cases. So at the heart of this approach lies data. In the classical machine learning setting the algorithm is provided with a set of questions and answers. Then after a period of computations over the pairs questions-answers, the algorithm is presented with new questions, some of them never seen before, that must be answered well enough.
 
 The formalization of this setting leads to an approach known as Supervised Learning, where the questions-answers pairs are codified into mathematical objects, usually numeric vectors for questions and real numbers or categories for answers and the proposed solution comes in the form of a function that maps questions to answers. The name supervised comes from the fact that the algorithm is provided with the answers to the questions, so in a figurative way it is being supervised by a teacher.
 
@@ -12,7 +12,7 @@ Deviation from this classical setting leads to the other broad categories of mac
 
 The contents of this section have mostly been adapted from Sutton and Barto's Introduction to Reinforcement Learning book [@sutton2018reinforcement].
 
-Reinforcement Learning (RL) aims to develop algorithms that can satisfactorily inform an agent which decisions to make in order to achieve a goal. The world in which the agent acts is called the environment. The decisions made by the agent could affect the environment and hopefully drive it closer to the goal. A signal of how well the agent is performing is received at each decision step. The signal is called reward and it is an abstraction to represent great or poor sequences of actions. Plenty of this reward signal mean a successful agent closer to its objective.
+Reinforcement Learning aims to develop algorithms that can satisfactorily inform an agent which decisions to make in order to achieve a goal. The world in which the agent acts is called the environment. The decisions made by the agent could affect the environment and hopefully drive it closer to the goal. A signal of how well the agent is performing is received at each decision step. The signal is called reward and it is an abstraction to represent great or poor sequences of actions. Plenty of this reward signal mean a successful agent closer to its objective.
 
 The Reinforcement Learning Problem could be formalized with Markov Decision Processes (MDPs). The MDP framework models the interaction between an agent and an environment. The agent takes actions and the environment responds with observations and a reward signal, this process is repeated until termination or forever. The non-terminating case is known as a continuing task and the terminating one as an episodic task.
  
@@ -24,17 +24,17 @@ $$ p(s’, r | s, a) \doteq \text{Pr}(S_t=s’,\ R_t=r\ |\ S_{t-1}=s,\ A_{t-1}=a
 
 This $p: \mathcal{S} \times \mathcal{R} \times \mathcal{S} \times \mathcal{A} \rightarrow [0,1]$ function is known as the _dynamics of the MDP_. The "$|$" (bar) symbol instead of a "$,$" (comma) in the function arguments is just a reminder that $p$ is calculating a conditional probability given $s$ and $a$. From here on the assumed $MDP$ would be a finite one.
 
-(ref:env-agent-interactions) Diagram of the _Agent-Environment system_ formalized as a MDP. At time step $t$ the "Agent" with knowledge of observation $S_t$ and reward $R_t$ performs action $A_t$ to which the "Environment" responds with a new observation $S_{t+1}$ and reward $R_{t+1}$, the cycle is iterated. Figure adapted from [@sutton2018reinforcement].
+(ref:env-agent-interactions) Diagram of the _Agent-Environment system_ formalized as a MDP. At time step $t$ the _"Agent"_ with knowledge of observation $S_t$ and reward $R_t$ performs action $A_t$ to which the _"Environment"_ responds with a new observation $S_{t+1}$ and reward $R_{t+1}$, the cycle is iterated. Figure adapted from [@sutton2018reinforcement].
 ```{r env-agent-interactions, fig.cap='(ref:env-agent-interactions)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
 knitr::include_graphics('pics/agent-env.png')
 ```
 
-(ref:rl-algorithm-type) Broad classification of Reinforcement Learning algorithms. Adapted from David Silver's Lecture *https://www.youtube.com/watch?v=2pWv7GOvuf0&t=1163s*.
+(ref:rl-algorithm-type) Broad classification of Reinforcement Learning algorithms. Adapted from [David Silver's Lecture 1](https://www.youtube.com/watch?v=2pWv7GOvuf0&t=1163s).
 ```{r rl-algorithm-type, fig.cap='(ref:rl-algorithm-type)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
 knitr::include_graphics('pics/rl_families.pdf')
 ```
 
-(ref:rl-relations) Broad relations between different types of strategies to solve the Reinforcement Learning Problem. Adapted from David Silver's Lecture *https://www.youtube.com/watch?v=2pWv7GOvuf0&t=1163s*.
+(ref:rl-relations) Broad relations between different types of strategies to solve the Reinforcement Learning Problem. Adapted from [David Silver's Lecture 1](https://www.youtube.com/watch?v=2pWv7GOvuf0&t=1163s).
 ```{r rl-relations, fig.cap='(ref:rl-relations)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
 knitr::include_graphics('pics/rl_families_relations.pdf')
 ```
@@ -135,7 +135,7 @@ The target network $\hat{Q}_{network}$ is a mere copy of the $Q_{network}$, with
 $$y_i = r_i + \gamma\ \underset{a'}{\max}\ \hat{Q}(s_i',a';\theta)$$
 
 The target network $\hat{Q}_{network}$ parameters are kept constant for a $C$ number of epochs, thus stabilizing the bootstrapping (_Bellman's equation_ update). To illustrate how just using the policy network ($Q_{network}$) for learning and updating can lead to instability we can think of two relatively similar states $s_1$ and $s_2$. Suppose that $s_1$ is used to estimate the value of $s_2$, when updating the parameters to minimize the error on $s_2$ inadvertently we would be changing $s_1$ estimated $Q$-value, as both states share the same parameters and are similar, so if $s_1$ value is required again for bootstrapping the estimation would be deteriorated, this effect may compound and cause the whole network estimation to diverge. Decoupling estimation and acting is the main idea behind the use of two networks, each $C$ number of epochs both networks are synchronized. Consequently the loss function of DQN is:
-$$MSE(\theta) = \mathds{E}\ \Bigg[ \bigg( y_i - Q(s_i,a_i;\theta)\bigg)^2 \Bigg]$$.
+$$MSE(\theta) = \mathds{E}\ \Bigg[ \bigg( y_i - Q(s_i,a_i;\theta)\bigg)^2 \Bigg]$$
 
 The error is then minimized through any general optimization algorithm, in the case of DQN typically by any variation of gradient descent.
 
@@ -145,7 +145,7 @@ The complete DQN algorithm can be found at [Apendix 1](#deep-q-networks-dqn-usin
 
 ## The Atari benchmark
 
-The Arcade Learning Environment (ALE) was introduced in 2013 [@bellemare2013arcade]. It was quickly adopted as a benchmark by the RL community. ALE consists on a wrapper around the [Stella emulator](https://stella-emu.github.io/) [^1] for the Atari 2600 console. This wrapper provides an interface to more than 50 Atari games. ALE was used by Google's DeepMind team in the DQN paper [@mnih2015human], arguably setting the current trend of deep reinforcement learning. Serving as a common benchmark ALE has been successfully used to develop new algorithms that later were applied to other domains, such as robotics [@risi2020chess]. As 2020 a single agent is capable of outperforming standard human play for 57 games Atari games [@badia2020agent57], however the end of the ALE benchmark is nowhere insight as a myriad of challenges still persist on Reinforcement Learning methodologies.
+ALE was introduced in 2013 [@bellemare2013arcade]. It was quickly adopted as a benchmark by the RL community. ALE consists on a wrapper around the [Stella emulator](https://stella-emu.github.io/) [^1] for the Atari 2600 console. This wrapper provides an interface to more than 50 Atari games. ALE was used by Google's DeepMind team in the DQN paper [@mnih2015human], arguably setting the current trend of deep reinforcement learning. Serving as a common benchmark ALE has been successfully used to develop new algorithms that later were applied to other domains, such as robotics [@risi2020chess]. As 2020 a single agent is capable of outperforming standard human play for 57 games Atari games [@badia2020agent57], however the end of the ALE benchmark is nowhere insight as a myriad of challenges still persist on Reinforcement Learning methodologies.
 
 The desirable characteristics of Atari games for RL evaluation are their variety of tasks, their short episodic nature and scores that can be, almost directly, interpreted as rewards. Also each game was created independently thus reducing the bias that would be introduced by a single party designing all the evaluation tasks. Agents interact with ALE through a set of 18 actions derived from 6 simple actions, namely four directions (up, down, left, right) and fire and NO-OP actions. The final 18 actions are combinations of the basic actions. The state information is raw pixel data with dimensions $210 \times 160$, with each pixel on a 7-bit color scale (0-127). Additionally the whole console RAM of 128 bytes can be used as input to the learning algorithms. ALE can be used as generative model in the sense that previous states, if saved, can be restored.
 
